<resources>
    <string name="app_name">统计助手</string>
    <string name="button_save">save</string>
    <string name="amount">金额</string>
    <string name="type">类型</string>
    <string name="please_input">请输入</string>
    <string name="please_select">请选择</string>
    <string name="new_type">新增类型</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="edit_type">编辑类型</string>
    <string name="edit_record">编辑记录</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="confirm_delete">确认删除这条记录么？</string>
    <string name="property_statistc">资产统计</string>
    <string name="share_details">分布详情</string>
    <string name="warm_hint">温馨提示</string>

    <string name="user_protocol_content">一、权利声明\n
1、本产品网站上的一切知识产权，以及与产品相关的所有信息内容，包括但不限于：文字表达及其组合、图标、图像、界面设计、电子文档、网页设计、系统模板等均为本公司所有，受著作权法、国际著作权条约及其他知识产权法律法规的保护。\n
2、未经明确的本公司的书面许可，任何人不得擅自使用、修改、复制、公开传播、改变、散布、发行或公开发表本网站的程序或内容，或者用于任何商业目的。如果用户认为用户的作品被复制并且侵犯版权，应及时向本公司提出书面权利通知，并提供相关法律证明。我司在收到上述法律文件后，将会依法进行相关处理。\n
二、服务内容\n
企业版豆芽提供跨平台社交通讯服务，支持多终端消息同步，联系人管理，群组聊天，图片、文件、语音传输等基本功能，并提组织架构、云盘、动态话题、转发文件到邮箱、红包、音视频会议、服务号、微应用等个性化定制服务。\n
三、服务费用\n
1、本服务的任何免费试用或免费功能和服务不应视为豆芽放弃后续收费的权利。豆芽有权提前7天以公告形式通知您收费标准，若您继续使用则需按豆芽公布的收费标准支付费用。\n
2、所有费用需通过豆芽接受的支付方式事先支付。前述使用费不包含其它任何税款、费用或相关汇款等支出，否则您应补足付款或自行支付该费用。\n
3、有权根据实际情况提前7天单方调整费用标准及收费方式，并以公告形式通知您，而无需获得您的事先同意，如您不同意收费应当立即停止服务的使用，否则使用则视为您已同意并应当缴纳费用。\n
4、您应当自行支付使用本服务可能产生的上网费以及其他第三方收取的通讯费、信息费等。\n
5、您理解并同意，在使用本软件中的音视频服务时，豆芽方需通过电信运营商提供的网络提供服务，运营商在某些情况下可能向用户收取一定通信费用（如用户处于异地漫游状态时需支付漫游接听费用）。\n
四、注册及账号管理\n
1、您确认，在您完成注册程序或以其他苏宁易购允许的方式实际使用服务时，您应当是具备完全民事权利能力和与所从事的民事行为相适应的行为能力的自然人、法人或其他组织。若您不具备前述主体资格，请勿使用服务，否则您及您的监护人应承担因此而导致的一切后果，且苏宁易购有权注销（永久冻结）您的账户，并向您及您的监护人索偿。如您代表一家公司或其他法律主体进行注册或以其他苏宁易购允许的方式实际使用本服务，则您声明和保证，您有权使该公司或该法律主体受本协议“条款“的约束。\n
2、您可以使用您提供或确认的手机号或者苏宁易购允许的其它方式作为用户账号进行注册。同时您应当按照法律法规和服务要求，按相应页面的提示准确提供并及时更新您的资料，以使之真实、及时，完整和准确。您承诺不得注册一个以上豆芽账号，不得冒充他人进行注册，不得未经许可为他人注册，不得以可能导致其他用户误认的方式注册账号，不得使用可能侵犯他人权益的用户名进行注册（包括但不限于涉嫌商标权、名誉权侵权等），否则苏宁易购有权取消该账号；\n
3、您了解并同意，豆芽注册账号（包括客户端账号、服务管理账号及企业账号）所有权归属于苏宁易购，注册完成后，您仅获得账号使用权。豆芽账号使用权仅归属于初始申请注册人，不得以任何方式转让或被提供予他人使用，否则，苏宁易购有权立即不经通知收回该账号，由此带来的因您使用本服务产生的全部数据、信息等被清空、丢失等的损失，您应自行承担。\n
4、在您成功注册后，苏宁易购将根据账号和密码确认您的身份。您应妥善保管您的终端及账户和密码，并对利用该账户和密码所进行的一切活动（包括但不限于网上点击同意或提交各类规则协议或购买服务、分享资讯或图片、发起电话会议等）负全部责任。您承诺，在密码或账户遭到未获授权的使用，或者发生其他任何安全问题时，将立即通知苏宁易购，且您同意并确认，苏宁易购不对上述情形产生的任何直接或间接的遗失或损害承担责任。除非有法律规定或司法裁定，且征得苏宁易购的同意，否则，您的账户、密码不得以任何方式转让、赠与或继承（与账户相关的财产权益除外）。\n
5、您了解并同意，如您注册豆芽账号后连续超过12个月未登录，苏宁易购为网站优化管理之目的有权回收该账号，相关问题及责任均由您自行承担。\n
6、苏宁易购根据本协议收回或取消账号后，有权自行对账号相关内容及信息以包括但不限于删除等方式进行处理，且无需就此向用户承担任何责任。\n
五、服务使用规范\n
1、用户充分了解并同意，苏宁易购仅为用户提供服务平台，您应自行对利用服务从事的所有行为及结果承担责任。相应地，您应了解，使用豆芽服务可能发生来自他人非法或不当行为（或信息）的风险，您应自行判断及行动，并自行承担相应的风险。\n
2、您应自行承担因使用服务所产生的费用，包括但不限于上网流量费、通信服务费等。\n
3、除非另有说明，本协议项下的服务只能用于非商业用途。您承诺不对本服务任何部分或本服务之使用或获得，进行复制、拷贝、出售、转售或用于包括但不限于广告及任何其它商业目的。\n
4、您承诺不会利用本服务进行任何违法或不当的活动，包括但不限于下列行为∶\n
4.1 上载、传送或分享含有下列内容之一的信息：\n
(a) 反对宪法所确定的基本原则的；\n
(b) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n
(c) 损害国家荣誉和利益的；\n
(d) 煽动民族仇恨、民族歧视、破坏民族团结的；\n
(e) 破坏国家宗教政策，宣扬邪教和封建迷信的；\n
(g) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；\n
(h) 侮辱或者诽谤他人，侵害他人合法权利的；\n
(i) 含有虚假、诈骗、有害、胁迫、侵害他人隐私、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；\n
(j) 含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的；\n
4.2 冒充任何人或机构，或以虚伪不实的方式陈述或谎称与任何人或机构有关；\n
4.3 伪造标题或以其他方式操控识别资料，使人误认为该内容为苏宁易购或其关联公司所传送；\n
4.4 将依据任何法律或合约或法定关系（例如由于雇佣关系和依据保密合约所得知或揭露之内部资料、专属及机密资料）知悉但无权传送之任何内容加以上载、传送或分享；\n
4.5 将涉嫌侵害他人权利（包括但不限于著作权、专利权、商标权、商业秘密等知识产权）之内容上载、传送或分享；\n
4.6 跟踪或以其它方式骚扰他人；\n
4.7 将任何广告、推广信息、促销资料、“垃圾邮件”、“滥发信件”、“连锁信件”、“直销”或其它任何形式的劝诱资料加以上载、传送或分享；供前述目的使用的专用区域或专用功能除外；\n
4.8 因本服务并非为某些特定目的而设计，您不可将本服务用于包括但不限于核设施、军事用途、医疗设施、交通通讯等重要领域。如果因为软件或服务的原因导致上述操作失败而带来的人员伤亡、财产损失和环境破坏等，苏宁易购不承担法律责任；\n
4.9 进行任何超出正常的好友或用户之间内部或外部信息沟通、交流等目的的行为；\n
4.10 出于超出正常好友或用户之间内部或外部信息沟通、交流等目的（包括但不限于为发送广告、垃圾、骚扰或违法违规等信息的目的），通过自己添加或诱导他人添加等任何方式使自己与其他用户形成好友关系（好友关系包括但不限于单向好友关系和双向好友关系，下同）；\n
4.11通过本服务向好友或其他用户发送大量信息；\n
4.12违反遵守法律法规、社会主义制度、国家利益、公民合法利益、公共秩序、社会道德风尚和信息真实性等“七条底线”要求的行为；\n
4.13从事任何违反中国法律、法规、规章、政策及规范性文件的行为。\n
5、您承诺不对本软件和服务从事以下行为：\n
5.1 将有关干扰、破坏或限制任何计算机软件、硬件或通讯设备功能的软件病毒或其他计算机代码、档案和程序之资料，加以上载、张贴、发送电子邮件或以其他方式传送；\n
5.2 干扰或破坏本服务或与本服务相连线之服务器和网络，或违反任何关于本服务连线网络之规定、程序、政策或规范；\n
5.3 通过修改或伪造软件运行中的指令、数据，增加、删减、变动软件的功能或运行效果，或者将用于上述用途的软件、方法进行运营或向公众传播，无论这些行为是否为商业目的；\n
5.4 通过非苏宁易购开发、授权的第三方软件、插件、外挂、系统，登录或使用软件及服务，或制作、发布、传播上述工具；\n
5.5 自行、授权他人或利用第三方软件对本软件及其组件、模块、数据等进行干扰。\n
6、您承诺，使用豆芽服务时您将严格遵守本协议(包括本协议第一条所述规则)。\n
7、您同意并接受苏宁易购无须时时监控您上载、传送或分享的资料及信息，但苏宁易购有权对您使用服务的情况进行审查、监督并采取相应行动，包括但不限于删除信息、中止或终止服务，及向有关机关报告。\n
8、您承诺不以任何形式使用本服务侵犯苏宁易购的商业利益，或从事任何可能对苏宁易购造成损害或不利于苏宁易购的行为。\n
9、您了解并同意，在苏宁易购服务提供过程中，苏宁易购及其关联公司或其授权单位和个人有权以各种方式投放各种商业性广告或其他任何类型的推广信息，同时，您同意接受以电子邮件或其他方式向您发送的上述广告或推广信息。\n
10、如您申请服务管理账号，则应自行通过账号添加和管理成员，并对管理成员的行为自行承担责任，苏宁易购根据您服务管理账号的行为对成员服务的调整亦由您承担后果，因此给苏宁易购或他人造成损失的，您应当予以赔偿。\n
11、您充分了解并同意，您必须为自己注册账号下的一切行为负责，包括您所发表的任何内容以及由此产生的任何后果。您应对使用本服务时接触到的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。苏宁易购无法且不会对您因前述风险而导致的任何损失或损害承担责任。\n
12、如果苏宁易购发现或收到他人举报您有违反本协议约定的，苏宁易购有权不经通知随时对相关内容进行删除、屏蔽，并采取包括但不限于收回账号，限制、暂停、终止您使用部分或全部本服务，追究法律责任等措施。\n
六、隐私政策\n
1、您在豆芽服务注册的账户具有密码保护功能，以确保您基本信息资料的安全，请您妥善保管账户及密码信息。\n
2、苏宁易购努力采取各种合理的物理、电子和管理方面的安全措施来保护您的信息，使您存储在豆芽中的信息和通信内容不会被泄漏、毁损或者丢失，包括但不限于SSL、信息加密存储、数据中心的访问控制。我们对可能接触到信息的员工或外包人员也采取了严格管理，包括但不限于根据岗位的不同采取不同的权限控制，与他们签署保密协议，监控他们的操作情况等措施。苏宁易购会按现有技术提供相应的安全措施来保护您的信息，提供合理的安全保障，苏宁易购将在任何时候尽力做到使您的信息不被泄漏、毁损或丢失， 但同时也请您注意在信息网络上不存在绝对完善的安全措施，请妥善保管好相关信息。\n
3、苏宁易购有权根据实际情况自行决定您在本软件及服务中数据的最长储存期限、服务器中数据的最大存储空间等，您应当保管好终端、账号及密码，并妥善保管相关信息和内容，苏宁易购对您自身原因导致的数据丢失或被盗以及在本软件及服务中相关数据的删除或储存失败不承担责任。\n
七、违约责任及赔偿\n
1、如果苏宁易购发现或收到他人举报您有违反本协议约定的，苏宁易购有权不经通知随时对相关内容进行删除、屏蔽，并采取包括但不限于限制、暂停、终止您使用豆芽账号及服务，限制、暂停、终止您使用部分或全部本服务，追究法律责任等措施。\n
2、您同意，由于您通过服务上载、传送或分享之信息、使用本服务其他功能、违反本协议、或您侵害他人任何权利因而衍生或导致任何第三人向苏宁易购及其关联公司提出任何索赔或请求，或苏宁易购及其关联公司因此而发生任何损失，您同意将足额进行赔偿（包括但不限于合理律师费）。\n
八、免责条款\n
1、用户实施违反包括但不限于本协议的行为，苏宁易购有权拒绝向用户提供服务，终止本协议，用户已支付的“服务费”预付款不予退还，同时本公司有进一步追究用户法律责任的权利。\n
2、苏宁易购通过内容部检测程序发现或经其他机构或用户举报而发现用户有发布违法信息、严重违背社会公德、以及其他违反法律禁止性规定或本协议约定的行为时，苏宁易购公有权立即终止对用户提供服务并不退还任何款项。\n
3、不论在何种情况下，苏宁易购均不对由于互联网正常的设备维护，互联网网络联接故障，电脑、通讯或其他系统的故障，电力故障，计算机2000年问题、黑客攻击、计算机病毒侵入或发作、电信部门技术调整导致的影响、因政府管制而造成的暂时性关闭、由于第三方原因(包括但不限于不可抗力，例如火灾、水灾、雷击、地震、洪水、台风、龙卷风、火山爆发、瘟疫和传染病流行、罢工、战争或暴力行为或类似事件等，政府行为，司法行政机关的命令或第三方的不作为不可抗力而造成的不能服务或延迟服务、用户数据丢失等承担责任，但苏宁易购应及时通知用户，并及时采取措施防止损失扩大。\n
4、用户了解并同意，苏宁易购不对因下述任一情况而导致用户的任何损害赔偿承担责任，包括但不限于利润、商誉、使用、数据等方面的损失或其它无形损失的损害赔偿 （无论苏宁易购是否已被告知该等损害赔偿的可能性）：\n
4.1 使用或未能使用苏宁易购服务；\n
4.2 第三方未经批准的使用用户的账户或更改用户的数据；\n
4.3 用户对苏宁易购服务的误解；\n
4.4 任何非因苏宁易购的原因而引起的与苏宁易购服务有关的其它损失。\n
5、特别提示：在受限于本协议其他规定的前提下，为更好的提供服务，苏宁易购将定期或不定期的对苏宁易购平台进行功能及（或）页面上的改造及（或）升级。本公司会通过苏宁易购平台或其他有效方式将相关事项及用户注意事项告知用户，经上述告知，苏宁易购不对因用户未能遵守相关注意事项而造成的损失承担任何责任，苏宁易购经改造及（或）升级后，对于用户因操作习惯性而引起的损失，苏宁易购不承担任何责任。\n
6、受限于本协议其他规定的前提下，因苏宁易购平台中接入的其他方的支付渠道与用户就支付关系发生任何争议的，与本公司无关，本公司不承担任何责任。</string>
</resources>